fix: profile overflow & add rule hint

--- a/src/renderer/activity.module.css
+++ b/src/renderer/activity.module.css
@@ -4,6 +4,10 @@
 .text-gray-300 {
   color: #939aa3a3;
 }
+.text-center {
+  text-align: center;
+}
+
 .statistics .count {
   font-size: 16px;
 }
@@ -47,12 +51,12 @@
 }
 
 .streakItem {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-weight: 600;
 }
 
 .streakItem > span {
-  font-size: 0.85rem;
+  font-size: 1rem;
   font-weight: normal;
-  margin-left: 2px;
+  margin-left: 4px;
 }
